[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[project]
name = "vercel-sandbox"
dynamic = ["version", "dependencies"]
description = "Python SDK for Vercel Sandbox"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "LICENSE.*"]

[project.scripts]
vercel-sandbox = "vercel.sandbox.__main__:main"
sandbox = "vercel.sandbox.__main__:main"

[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.vercel.release.dependencies]
dependencies = [
    "vercel-internal-core>=0.1.0,<0.2.0",
    "vercel-oidc>=0.6.0",
    "anyio>=4.0.0,<5",
    "httpx>=0.27.0,<1",
    "pydantic>=2.7.0,<3",
]

[tool.uv.sources]
vercel-internal-core = { workspace = true }
vercel-oidc = { workspace = true }

[tool.hatch.version]
path = "vercel/sandbox/version.py"

[tool.hatch.build.targets.sdist]
force-include = { "../../scripts/hatch_build.py" = "/_vercel_hatch_build.py" }
include = [
    "/vercel/sandbox/**/*.py",
    "/vercel/sandbox/py.typed",
    "/README.md",
    "/pyproject.toml",
    "/hatch_build.py",
    "/LICENSE",
]
exclude = ["/**/__pycache__"]

[tool.hatch.build.targets.wheel]
dev-mode-dirs = ["."]
only-include = ["/vercel/sandbox"]
exclude = ["/**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--no-header --capture=tee-sys -m 'not live'"
asyncio_mode = "auto"
markers = ["live: requires live Sandbox API credentials"]

[tool.poe]
include = "../../scripts/poe/poe.toml"
verbosity = -1

[tool.mypy]
cache_dir = "../../.mypy_cache/vercel-sandbox"
explicit_package_bases = true
packages = ["vercel.sandbox"]

[tool.poe.tasks.typecheck]
cmd = "$MYPY"
