[build-system]
requires = ["hatchling>=1.27.0,<2"]
build-backend = "hatchling.build"

[project]
name = "vercel"
dynamic = ["version"]
description = "Python SDK for Vercel"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "LICENSE.*"]
dependencies = [
    "httpx>=0.27.0,<1",
    "pydantic>=2.7.0,<3",
    "anyio>=4.0.0,<5",
    "typing-extensions>=4.0.0,<5 ; python_version < '3.11'",
    "python-dotenv>=1.0.0,<2",
    "websockets>=12.0,<17",
    "cbor2>=6.0,<7",
    "vercel-workers>=0.0.16,<1 ; python_version >= '3.12'",
    "vercel-headers>=0.6.0",
    "vercel-oidc>=0.6.0",
]

[project.scripts]
vercel = "vercel.__main__:main"
vercel-sandbox = "vercel.sandbox.__main__:main"
sandbox = "vercel.sandbox.__main__:main"

[tool.uv.sources]
vercel-headers = { workspace = true }
vercel-oidc = { workspace = true }

[tool.hatch.version]
path = "version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/**/*.py",
    "/**/*.md",
    "/py.typed",
    "/pyproject.toml",
    "/LICENSE",
]
exclude = [
    "/**/__pycache__",
]

[tool.hatch.build.targets.wheel]
dev-mode-dirs = [".."]
only-include = [
    "/_internal",
    "/blob",
    "/cache",
    "/cron",
    "/deployments",
    "/functions",
    "/projects",
    "/sandbox",
    "/workflow",
    "/__main__.py",
    "/client.py",
    "/env.py",
    "/py.typed",
    "/README.md",
    "/version.py",
]
exclude = [
    "/pyproject.toml",
    "/**/__pycache__",
]

[tool.hatch.build.targets.wheel.sources]
"" = "vercel"
